tests/ui/impl-trait/impl_fn_associativity.stderr
error: undefined opaque type
  --> $DIR/impl_fn_associativity.rs:4:30
   |
LL | fn f_debug() -> impl Fn() -> impl Debug {
   |                              ^^^^^^^^^^

error: undefined opaque type
  --> $DIR/impl_fn_associativity.rs:9:31
   |
LL | fn ff_debug() -> impl Fn() -> impl Fn() -> impl Debug {
   |                               ^^^^^^^^^^^^^^^^^^^^^^^

error: undefined opaque type
  --> $DIR/impl_fn_associativity.rs:9:44
   |
LL | fn ff_debug() -> impl Fn() -> impl Fn() -> impl Debug {
   |                                            ^^^^^^^^^^

error: undefined opaque type
  --> $DIR/impl_fn_associativity.rs:15:29
   |
LL | fn multi() -> impl Fn() -> (impl Debug + Send) {
   |                             ^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

